Add endpoints for getting all connections, and updating connection_type
Endpoints added
Updated Tests
Updated swagger.yaml
