# swagger.yaml
@@ -14,7 +14,7 @@ paths:
       operationId: "getPeople"
       produces:
       - "application/json"
-      responses:        
+      responses:
         200:
           description: "successful operation"
           schema:
@@ -48,6 +48,21 @@ paths:
         400:
           description: "Invalid input"
   /connections:
+    get:
+      summary: "Get list of connections"
+      description: ""
+      operationId: "getConnections"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Connection"
+        400:
+          description: "Invalid input"
     post:
       summary: "Create a new connection"
       description: ""
@@ -72,6 +87,82 @@ paths:
               $ref: "#/definitions/Connection"
         400:
           description: "Invalid input"
+  /connections:
+    get:
+      summary: "Get list of connections"
+      description: ""
+      operationId: "getConnections"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Connection"
+        400:
+          description: "Invalid input"
+    post:
+      summary: "Create a new connection"
+      description: ""
+      operationId: "createConnection"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Connection object that needs to be created"
+        required: true
+        schema:
+          $ref: "#/definitions/Connection"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "object"
+            items:
+              $ref: "#/definitions/Connection"
+        400:
+          description: "Invalid input"
+  /connections/{connection_id}:
+    patch:
+      summary: "Update the connection tpye for a given connection"
+      parameters:
+        - name: connection_id
+        in: path
+        required: true
+        description: Numeric ID of the connection to modify
+        schema:
+            type: integer
+            format: int64
+            minimum: 1
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                connection_type:
+                  type: string
+      description: ""
+      operationId: "updateConnection"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Connection"
+        400:
+          description: "Invalid connection_type"
+        404:
+          description: "Invalid connection_id"
 definitions:
   Person:
     type: "object"
